Don't check mail automatically when the resource is offline.

BUG: 254395